mise a jour data

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,23 +18,47 @@
     "import pandas as pd\n",
     "from pandas import json_normalize\n",
     "import geopandas as gpd\n",
-    "from io import StringIO"
+    "from io import StringIO\n",
+    "import seaborn as sns\n",
+    "import folium\n",
+    "import json\n",
+    "import requests\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: python-dotenv in /opt/conda/lib/python3.12/site-packages (1.0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()  # Charge les variables d'environnement du fichier .env\n",
     "\n",
-    "APPLICATION_ID= os.getenv(\"APPLICATION_ID\")\n"
+    "APPLICATION_ID= os.getenv(\"APPLICATION_ID\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.StringIO object at 0x7f3393253280>\n"
+     ]
+    }
+   ],
    "source": [
     "#on récupère la liste des stations\n",
     "station=client.request('GET', 'https://public-api.meteofrance.fr/public/DPObs/v1/liste-stations', verify=False)\n",
@@ -111,12 +143,13 @@
     "\n",
     "\n",
     "data = StringIO(station.text)\n",
+    "print(data)\n",
     "df = pd.read_csv(data,sep=';')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +352,7 @@
        "[2121 rows x 9 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,26 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cartiflette import carti_download\n",
-    "departements = carti_download(\n",
-    "    values=\"France\",\n",
-    "    crs=4326,\n",
-    "    borders=\"DEPARTEMENT\",\n",
-    "    vectorfile_format=\"geojson\",\n",
-    "    filter_by=\"FRANCE_ENTIERE_DROM_RAPPROCHES\",\n",
-    "    source=\"EXPRESS-COG-CARTO-TERRITOIRE\",\n",
-    "    year=2022,\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +413,7 @@
        "[2.2518703333333336, 48.56851844444444]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,12 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "import folium\n",
+    "\n",
     "\n",
     "\n",
     "def interactive_map_dpe(dpe):\n",
@@ -450,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -640,6 +653,9 @@
        "                {}\n",
        "            );\n",
        "        \n",
+       "    \n",
+       "            tile_layer_b42dc28ab758b7716806b8c0002054dd.addTo(map_b0122afeb874cfc8ee0e5fa24ffc622b);\n",
+       "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
@@ -647,7 +663,7 @@
        "<folium.folium.Map at 0x7f70d8e08680>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,16 +674,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "785316809547"
+       "785364999597"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,14 +705,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client=Client()\n",
+    "datameteo=client.request('GET',\"https://public-api.meteofrance.fr/public/DPClim/v1/commande/fichier?id-cmde={}\".format(gener_idcommande(\"2024-11-01\",\"2024-11-05\")),verify=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7f33c962ae00>\n",
       "     POSTE      DATE   RR  DRR    TN  HTN    TX   HTX   TM   TMNX  ...  BRUME  \\\n",
       "0  1014002  20241101  0,0  NaN   1,2  614  21,8  1238  8,6  11,50  ...    NaN   \n",
       "1  1014002  20241102  0,2  NaN  -0,3  510  18,1  1225  7,7   8,90  ...    NaN   \n",
@@ -723,22 +750,11 @@
     }
    ],
    "source": [
-    "client=Client()\n",
-    "datameteo=client.request('GET',\"https://public-api.meteofrance.fr/public/DPClim/v1/commande/fichier?id-cmde={}\".format(gener_idcommande(\"2024-11-01\",\"2024-11-05\")),verify=False)\n",
-    "\n",
-    "\n",
-    "print(datameteo)\n",
     "data = StringIO(datameteo.text)\n",
+    "print(data)\n",
     "df = pd.read_csv(data,sep=';')\n",
-    "print(df)\n"
+    "print(df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
