--- a/data.ipynb
+++ b/data.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,30 +86,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()  # Charge les variables d'environnement du fichier .env\n",
     "\n",
-    "APPLICATION_ID= os.getenv(\"APPLICATION_ID\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.StringIO object at 0x7f0551d12bc0>\n"
+      "<_io.StringIO object at 0x7f0551d12d40>\n"
      ]
     }
    ],
    "source": [
     "#on récupère la liste des stations\n",
     "import fonctions as f\n",
+    "client=f.Client()\n",
     "\n",
-    "station=f.client.request('GET', 'https://public-api.meteofrance.fr/public/DPObs/v1/liste-stations', verify=False)\n",
+    "station=client.request('GET', 'https://public-api.meteofrance.fr/public/DPObs/v1/liste-stations', verify=False)\n",
     "\n",
     "\n",
     "\n",
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +322,7 @@
        "[2121 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +360,7 @@
     }
    ],
    "source": [
-    "#On récupere la liste des stations climatologiques envoant les mesures à une fréquence de 1 journée\n",
+    "#On récupere la liste des stations climatologiques avec les mesures à une fréquence de 1 journée\n",
     "client = f.Client()\n",
     " # Issue a series of API requests an example. For use this test, you must first subscribe to the arome api with your application\n",
     "client.session.headers.update({'Accept': 'application/json'})\n",
@@ -378,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +549,7 @@
        "8  161         True  POINT (2.11617 48.73533)  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,10 +566,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = interactive_map_dpe(gdf)"
-   ]
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'fonctions' has no attribute 'interactive_map_dpe'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m m \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minteractive_map_dpe\u001b[49m(gdf)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'fonctions' has no attribute 'interactive_map_dpe'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -783,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -795,21 +804,21 @@
     }
    ],
    "source": [
-    "client=Client()\n",
+    "client=f.Client()\n",
     "datameteo=client.request('GET',\"https://public-api.meteofrance.fr/public/DPClim/v1/commande/fichier?id-cmde={}\".format(f.gener_idcommande(\"2024-11-01\",\"2024-11-05\")),verify=False)\n",
     "print(datameteo)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.StringIO object at 0x7f0551d131c0>\n",
+      "<_io.StringIO object at 0x7f054bfb7400>\n",
       "Nombre de colonnes avec des valeurs manquantes : 37\n"
      ]
     }
