--- a/data.ipynb
+++ b/data.ipynb
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -696,6 +696,8 @@
     }
    ],
    "source": [
+    "#générer la base de données selon certaines dates\n",
+    "\n",
     "client=f.Client()\n",
     "datameteo=client.request('GET',\"https://public-api.meteofrance.fr/public/DPClim/v1/commande/fichier?id-cmde={}\".format(f.gener_idcommande(\"2024-11-01\",\"2024-11-05\")),verify=False)\n",
     "print(datameteo)\n"
