ajout des observations de 2022

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.StringIO object at 0x7faf7bafa800>\n"
+      "<_io.StringIO object at 0x7fb4eaa4a980>\n"
      ]
     }
    ],
@@ -24,12 +24,13 @@
     "\n",
     "dataStation = f.StringIO(station.text)\n",
     "print(dataStation)\n",
-    "df = f.pd.read_csv(dataStation,sep=';')\n"
+    "df = f.pd.read_csv(dataStation,sep=';')\n",
+    "df = df.rename(columns={'Latitude': 'lat', 'Longitude': 'lon'})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +57,8 @@
        "      <th>Id_station</th>\n",
        "      <th>Id_omm</th>\n",
        "      <th>Nom_usuel</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
        "      <th>Altitude</th>\n",
        "      <th>Date_ouverture</th>\n",
        "      <th>Pack</th>\n",
@@ -203,7 +204,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Id_station   Id_omm                Nom_usuel   Latitude   Longitude  \\\n",
+       "      Id_station   Id_omm                Nom_usuel        lat         lon  \\\n",
        "0        1014002      NaN                   ARBENT  46.278167    5.669000   \n",
        "1        1027003      NaN               BALAN_AERO  45.833000    5.106667   \n",
        "2        1034004      NaN                   BELLEY  45.769333    5.688000   \n",
@@ -232,14 +233,14 @@
        "[2123 rows x 9 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gdf = f.gpd.GeoDataFrame(\n",
-    "    df, geometry=f.gpd.points_from_xy(df.Longitude, df.Latitude), crs=4326\n",
+    "    df, geometry=f.gpd.points_from_xy(df.lon, df.lat), crs=4326\n",
     ")\n",
     "gdf\n"
    ]
@@ -684,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -699,13 +700,13 @@
     "#générer la base de données selon certaines dates\n",
     "\n",
     "client=f.Client()\n",
-    "datameteo=client.request('GET',\"https://public-api.meteofrance.fr/public/DPClim/v1/commande/fichier?id-cmde={}\".format(f.gener_idcommande(\"2024-01-05\",\"2024-01-31\")),verify=False)\n",
+    "datameteo=client.request('GET',\"https://public-api.meteofrance.fr/public/DPClim/v1/commande/fichier?id-cmde={}\".format(f.gener_idcommande(\"2022-01-05\",\"2022-01-31\")),verify=False)\n",
     "print(datameteo)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,10 +723,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "matrix2022=f.generate_month_matrix(2022)\n",
     "matrix2023=f.generate_month_matrix(2023)\n",
     "matrix2024=f.generate_month_matrix(2024)\n",
     "\n",
@@ -763,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -771,29 +773,71 @@
      "output_type": "stream",
      "text": [
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb4c0>\n",
+      "<_io.StringIO object at 0x7fb4e8feca00>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb700>\n",
+      "<_io.StringIO object at 0x7fb4e8fec880>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb700>\n",
+      "<_io.StringIO object at 0x7fb4e8fec940>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafaec0>\n",
+      "<_io.StringIO object at 0x7fb4e8feca00>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafaec0>\n",
+      "<_io.StringIO object at 0x7fb4e8fec880>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb340>\n",
+      "<_io.StringIO object at 0x7fb4e8fed000>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb340>\n",
+      "<_io.StringIO object at 0x7fb4e8fec940>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb700>\n",
+      "<_io.StringIO object at 0x7fb4e8feca00>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafaec0>\n",
+      "<_io.StringIO object at 0x7fb4e8fec880>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb4c0>\n",
+      "<_io.StringIO object at 0x7fb4e8fed240>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafa5c0>\n",
+      "<_io.StringIO object at 0x7fb4e8fec880>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb7c0>\n"
+      "<_io.StringIO object at 0x7fb4e8fed000>\n"
+     ]
+    }
+   ],
+   "source": [
+    "data2022=f.pd.DataFrame()\n",
+    "for i in range(len(matrix2022)):\n",
+    "    data2022=f.pd.concat([data2022,gener_data(matrix2023[i][0],matrix2023[i][1])], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fed240>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fecdc0>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fecac0>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fed000>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fed240>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fecdc0>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fecdc0>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fed000>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fed240>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fec880>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fecac0>\n",
+      "<Response [201]>\n",
+      "<_io.StringIO object at 0x7fb4e8fed000>\n"
      ]
     }
    ],
@@ -806,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -814,25 +858,25 @@
      "output_type": "stream",
      "text": [
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafaec0>\n",
+      "<_io.StringIO object at 0x7fb4e8fed240>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb4c0>\n",
+      "<_io.StringIO object at 0x7fb4e8feca00>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafa5c0>\n",
+      "<_io.StringIO object at 0x7fb4e8fed000>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb100>\n",
+      "<_io.StringIO object at 0x7fb4e8fecb80>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafaec0>\n",
+      "<_io.StringIO object at 0x7fb4e8fed240>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb4c0>\n",
+      "<_io.StringIO object at 0x7fb4e8feca00>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafa5c0>\n",
+      "<_io.StringIO object at 0x7fb4e8fed000>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb7c0>\n",
+      "<_io.StringIO object at 0x7fb4e8fec880>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafaec0>\n",
+      "<_io.StringIO object at 0x7fb4e8fed240>\n",
       "<Response [201]>\n",
-      "<_io.StringIO object at 0x7faf7bafb4c0>\n"
+      "<_io.StringIO object at 0x7fb4e8feca00>\n"
      ]
     }
    ],
@@ -844,16 +888,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datameteo=f.pd.concat([data2023,data2024], ignore_index=True)\n"
+    "datameteo=f.pd.concat([data2022,data2023], ignore_index=True)\n",
+    "datameteo=f.pd.concat([datameteo,data2024], ignore_index=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
